Добавил про Copy-on-write

--- a/PHP/01 Переменные.md
+++ b/PHP/01 Переменные.md
@@ -15,3 +15,9 @@ increase($a);
 var_dump($a); 
 
 ```
+
+#### Copy-on-write
+
+https://zualex.com/posts/copy-on-write-php/?ysclid=lpv3nujiwv229863162
+
+Суть подхода сopy-on-write или копирование при изменении заключается в том, что при чтении переменных используется общая копия, в случае изменения переменной — создается новая копия.
